--- a/welcome.html
+++ b/welcome.html
@@ -5,6 +5,72 @@
     <title>Welcome</title>
 </head>
 <body>
- <p>Hello World!</p>
+    <header id="top">
+        <h1>Welcome to Veridian Dynamics</h1>
+        <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong></p>
+    </header>
+    <nav>
+        <h2>Core Values</h2>
+        <ul>
+            <li>Competence</li>
+            <li>Involvement</li>
+            <li>Technology</li>
+        </ul>
+        <h2>Our Process</h2>
+        <ol>
+            <li>Plan</li>
+            <li>Evaluate</li>
+            <li>Implement</li>
+        </ol>
+        <h2>2020 Vision</h2>
+        <ul>
+            <li>Become #1 in Technology</li>
+            <li>Increase Success by 20%</li>
+            <li>Increase Business by 30%</li>
+        </ul>
+    </nav>
+    <main>
+        <h2>Company Vision</h2>
+<!--Maybe throw them into a table to format them in a 2x2?-->
+        <table>
+            <tr>
+                <td><img src="assets/cat1.jpeg"></td>
+                <td><img src="assets/cat2.jpeg"></td>
+            </tr>
+            <tr>
+                <td><img src="assets/cat3.jpeg"></td>
+                <td><img src="assets/cat4.jpeg"></td>
+            </tr>
+        </table>
+        <section id="product-prices">
+            <h2>Our Product</h2>
+            <table>
+                <th><strong>Plan</strong>
+
+                    <td><strong>Price</strong></td>
+                    <td><strong>Features</strong></td>
+                </th>
+                <tr>
+                    <td>Starter</td>
+                    <td>$99</td>
+                    <td>Basic Technology</td>
+                </tr>
+                <tr>
+                    <td>Advanced</td>
+                    <td>$199</td>
+                    <td>Additional Features</td>
+                </tr>
+                <tr>
+                    <td>Premium</td>
+                    <td>$499</td>
+                    <td>Unlimited Support</td>
+                </tr>
+            </table>
+            <p><em>All products come with our quality guarantee</em></p>
+        </section>
+    </main>
+    <footer>
+        <a href="">Go to Top</a>
+    </footer>
 </body>
 </html>
