added css to welcome.html

--- a/welcome.html
+++ b/welcome.html
@@ -5,8 +5,9 @@
     <title>Welcome</title>
 </head>
 <body>
+<link rel="stylesheet" href="css/style.css">
     <header id="top">
-        <h1>Welcome to Veridian Dynamics</h1>
+        <h1 class="fancy-header">Welcome to Veridian Dynamics</h1>
         <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong></p>
     </header>
     <nav>
