Changed file directory, added imgs directory in assets. imported google font in style.css, added styling for welcome.html

--- a/welcome.html
+++ b/welcome.html
@@ -35,22 +35,22 @@
 <!--Maybe throw them into a table to format them in a 2x2?-->
         <table>
             <tr>
-                <td><img src="assets/cat1.jpeg"></td>
-                <td><img src="assets/cat2.jpeg"></td>
+                <td><img src="assets/imgs/cat1.jpeg"></td>
+                <td><img src="assets/imgs/cat2.jpeg"></td>
             </tr>
             <tr>
-                <td><img src="assets/cat3.jpeg"></td>
-                <td><img src="assets/cat4.jpeg"></td>
+                <td><img src="assets/imgs/cat3.jpeg"></td>
+                <td><img src="assets/imgs/cat4.jpeg"></td>
             </tr>
         </table>
         <section id="product-prices">
             <h2>Our Product</h2>
             <table>
-                <th><strong>Plan</strong>
-
+                <tr>
+                    <td><strong>Plan</strong></td>
                     <td><strong>Price</strong></td>
                     <td><strong>Features</strong></td>
-                </th>
+                </tr>
                 <tr>
                     <td>Starter</td>
                     <td>$99</td>
@@ -71,7 +71,7 @@
         </section>
     </main>
     <footer>
-        <a href="">Go to Top</a>
+        <a href="#top">Go to Top</a>
     </footer>
 </body>
 </html>
