--- a/order-pizza.html
+++ b/order-pizza.html
@@ -4,19 +4,235 @@
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Order Form Exercise Using Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-<nav class="navbar">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Order Online</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Menu</a>
+                    </li>
+                </ul>
+                <form class="d-flex flex-row">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+    </nav>
+
+
     <div class="container-fluid">
-        <span class="navbar-brand bg-light">Pizza World</span>
-
-        <form class="d-flex">
-            <input class="form-control" type="search" placeholder="Zip Code" aria-label="Search">
-            <button class="btn btn-outline-primary">Search stores near you!</button>
-        </form>
-
+        <div class="jumbotron" id="jumbotron">
+            <div class="bg-light bg-opacity-50"><h1 class="text-center">Welcome to Pizza World!</h1></div>
+        </div>
     </div>
-</nav>
+    <h2>Build Your Own Pizza!</h2>
+
+<!--Tabs, with buttons for our 3 tabs, Size and Crust, Cheese and Sauce, and Toppings..-->
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+<!--First Tab, Size and Crust-->
+        <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Size and Crust</button>
+        </li>
+<!--Second Tab, Cheese and Sauce-->
+        <li class="nav-item" role="presentation">
+            <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Cheese and Sauce</button>
+        </li>
+<!--Third Tab, Toppings..-->
+        <li class="nav-item" role="presentation">
+            <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Toppings</button>
+        </li>
+    </ul>
+
+    <div class="tab-content" id="myTabContent">
+    <!--Tab One Form, Size and Crust-->
+        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+        <!--Card for "header"-->
+            <div class="card bg-primary text-light">Choose Size and Crust
+            <!--Start of Form Data-->
+                <div class="card">
+                    <p class="card-title text-dark bg-light">Hand Tossed</p>
+                    <ul class="list-group text-dark">
+                    Garlic Seasoned Crust, with a rich, buttery taste.
+                    <li class="list-group-item">
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="handTossed" id="small-handtossed">
+                            <label class="form-check-label" for="small-handtossed">
+                                Small (10")
+                            </label>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="handTossed" id="medium-handtossed" checked>
+                            <label class="form-check-label" for="medium-handtossed">
+                                Medium (12")
+                            </label>
+                        </div>
+                    </li>
+                </ul>
+                </div>
+
+                <div class="card-title text-dark bg-light">
+                    <p class="card-title text-dark bg-light">Crispy Thin</p>
+                    <ul class="list-group text-dark">
+                        Thin enough for optimum crispy to crunchy ratio.
+                        <li class="list-group-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="crispyThin" id="medium-crispy-thin">
+                                <label class="form-check-label" for="medium-crispy-thin">
+                                    Medium (12")
+                                </label>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="crispyThin" id="large-crispy-thin" checked>
+                                <label class="form-check-label" for="large-crispy-thin">
+                                    Large (14")
+                                </label>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+            <button class="btn btn-primary" id="tab1-next-btn">Next</button>
+        </div>
+
+<!--Tab Two, Cheese and Sauce-->
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            <div class="card card-title bg-primary">
+                Choose Cheese and Sauce
+
+                <div class="card card-title bg-light text-dark">
+                    <p class="card-title">Cheese</p>
+
+                    <div>
+                        How much?
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected value="0">Normal</option>
+                            <option value="1">Light</option>
+                            <option value="2">Extra</option>
+
+                        </select>
+                    </div>
+
+                    <div class="card card-title bg-light text-dark">
+                        Sauce
+                        <div>
+                            What Type?
+                            <select class="form-select" aria-label="Default select example">
+                                <option selected value="0">Tomato</option>
+                                <option value="1">Alfredo</option>
+                                <option value="2">BBQ</option>
+
+                            </select>
+                        </div>
+                        <div>
+                            How much?
+                            <select class="form-select" aria-label="Default select example">
+                                <option selected value="0">Normal</option>
+                                <option value="1">Light</option>
+                                <option value="2">Extra</option>
+
+                            </select>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <button type="button" class="btn btn-primary" id="tab2-prev-btn">Previous</button>
+            <button type="button" class="btn btn-primary" id="tab2-next-btn">Next</button>
+        </div>
+
+<!--Tab Three, Toppings-->
+        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+            <div class="card card-title bg-light text-dark">
+                <p class="card card-title bg-primary text-dark">Choose Toppings</p>
+
+                <div>
+                    Choose Meats
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="sausage" id="sausage">
+                        <label class="form-check-label" for="sausage">
+                            Sausage
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="pepperoni" id="pepperoni">
+                        <label class="form-check-label" for="pepperoni">
+                            Pepperoni
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="ham" id="ham">
+                        <label class="form-check-label" for="ham">
+                            Pepperoni
+                        </label>
+                    </div>
+                </div>
+
+                <div>
+                    Choose Non-Meats
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="onions" id="onions">
+                        <label class="form-check-label" for="onions">
+                            Onion
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="bellPepper" id="bell-pepper">
+                        <label class="form-check-label" for="bell-pepper">
+                            Bell Pepper
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="mushroom" id="mushroom">
+                        <label class="form-check-label" for="mushroom">
+                            Mushroom
+                        </label>
+                    </div>
+                </div>
+                <button type="button" class="btn btn-primary" id="tab3-prev-btn">Previous</button>
+                <button type="button" class="btn btn-primary" id="tab3-submit">Submit</button>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        // for tab pane button functionality,
+        // the only complete solution I found was using JS to force-click a particular tab
+        (function() {
+            // add a click listener to the button on the first tab pane
+            document.querySelector("#tab1-next-btn").addEventListener("click", function(event) {
+                // grab a reference to the TAB for the first pane (not the pane itself)
+                const homeTab = document.querySelector("#profile-tab");
+                // force-click it
+                homeTab.click();
+            });
+            document.querySelector("#tab2-prev-btn").addEventListener("click", function(event) {
+                const homeTab = document.querySelector("#home-tab");
+                homeTab.click();
+            });
+            document.querySelector("#tab2-next-btn").addEventListener("click", function(event) {
+                const homeTab = document.querySelector("#contact-tab");
+                homeTab.click();
+            });
+            document.querySelector("#tab3-prev-btn").addEventListener("click", function(event) {
+                const homeTab = document.querySelector("#profile-tab");
+                homeTab.click();
+            });
+        })();
+    </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
