refactored file names for CH

--- a/planets-js.html
+++ b/planets-js.html
@@ -5,7 +5,7 @@
     <title>Planets Array</title>
 </head>
 <body>
-    <script src="js/planets_array.js">
+    <script src="js/planets-array.js">
     </script>
 </body>
 </html>
