--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -8,8 +8,10 @@
         <link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet'/>
         <script src="keys.js"></script>
     </head>
+
     <body>
         <div id="map" style="width: 400px; height: 400px;"></div>
+        <script src="js/mapbox-geocoder-utils.js"></script>
         <script src="js/mapbox.js"></script>
     </body>
 </html>
