added search functionality, need to make markers temporary, or remove

--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -22,6 +22,12 @@
             </select>
         </form>
 
+        <form>
+            <label for="address-input">Enter an address</label>
+            <textarea id="address-input"></textarea>
+            <button id="address-submit" type="button">Submit Address</button>
+        </form>
+
         <script src="js/mapbox-geocoder-utils.js"></script>
         <script src="js/mapbox.js"></script>
     </body>
