working on functionality to remove markers

--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -26,6 +26,7 @@
             <label for="address-input">Enter an address</label>
             <textarea id="address-input"></textarea>
             <button id="address-submit" type="button">Submit Address</button>
+            <button id="clear-markers" type="button">Clear Markers</button>
         </form>
 
         <script src="js/mapbox-geocoder-utils.js"></script>
