--- a/weather_map.html
+++ b/weather_map.html
@@ -16,6 +16,8 @@
 
         </div>
 
+        <div id="map" style="width: 80%; height: 600px;"></div>
+
     <script src="js/weather_map.js"></script>
     </body>
 </html>
