added form for search, added weather card population, added icons, need to fix styling

--- a/weather_map.html
+++ b/weather_map.html
@@ -10,7 +10,13 @@
         <script src="keys.js"></script>
     </head>
     <body>
-        <h1>Weather..</h1>
+        <h1>Weather App</h1>
+
+        <form id="search-form">
+            <label for="address-input">Place</label>
+            <textarea id="address-input"></textarea>
+            <button id="address-submit" type="button">Find</button>
+        </form>
 
         <div id="weather-cards">
 
